Update package.json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gajindubandara.github.io/goldeni-frontend",
+  "homepage": "https://gajindubandara.github.io/goldeni-frontend",
   "name": "goldeni-frontend",
   "version": "0.1.0",
   "private": true,
