--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://gajindubandara.github.io/goldeni-frontend",
   "name": "goldeni-frontend",
   "version": "0.1.0",
   "private": true,
@@ -47,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.0.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
