--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "antd": "^5.10.2",
+    "apexcharts": "^3.47.0",
     "axios": "^1.6.0",
     "ini": "^4.1.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.17.0",
