--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Golden i",
+  "name": "Golden i",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://res.cloudinary.com/dwldehfnr/image/upload/v1698754779/goldeni-frontend/wmjw8aurif20ion883mg.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://res.cloudinary.com/dwldehfnr/image/upload/v1698754779/goldeni-frontend/wmjw8aurif20ion883mg.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://res.cloudinary.com/dwldehfnr/image/upload/v1698754779/goldeni-frontend/wmjw8aurif20ion883mg.png",
       "type": "image/png",
       "sizes": "512x512"
     }
